2003-03-18  Derek Price  <derek@ximbiot.com>

	* main.c (main): Output -R warning in quiet mode and correct spelling
	in this warning message.
	* sanity.sh (commit-readonlyfs-2r4): Correct cascaded spelling mistake
	in test.

2003-03-17  Derek Price  <derek@ximbiot.com>

	* add.c: Correct comment.
	* client.c: Ditto.
	* checkin.c (Checkin): Pass work file name to RCS_checkin so that this
	function works properly in the case insensitive mode.
	* commit.c (checkaddfile): Fix and factor add logic so that the
	correct files and directories are created in the case insensitive mode.
	Reuse code in RCS_parse() below.  This avoids a problem that could
	cause corrupted RCS files to be created on an add from a case
	insensitive system.  Corrupted RCS files could cause later assertion
	failures for everyone.
	(locate_rcs): Move this function...
	* filesubr.c (locate_rcs): ...here and rewrite it.
	(fopen_case): Remove this function.
	(locate_file_in_dir): New function.
	* cvs.h (locate_rcs): Prototype new function.
	* rcs.c (RCS_parse): Factor out file location into locate_rcs.

2003-03-17  Mark D. Baushke  <mdb@cvshome.org>

	* main.c (main): Issue a warning about readonlyfs options unless
	quiet or really_quiet is set.
	* lock.c (Writer_Lock): Modify readonlyfs error message text.
	* sanity.sh (commit-readonlyfs): Adjust test for new messages.

2003-03-17  Larry Jones  <lawrence.jones@eds.com>

	* server.c (switch_to_user): Add syslog calls for setgid/setuid
	failure.

2003-03-16  Mark D. Baushke  <mdb@cvshome.org>

	* cvs.h (CVSREADONLYFS_ENV): New macro to support new environment
	variable "CVSREADONLYFS" for read-only file-system repository mode.
	* lock.c (Reader_Lock, Writer_Lock): Add support for new read-only
	file-system repository mode.
	* main.c (main, opt_usage): Ditto.
	* root.c (parse_cvsroot): Ditto.
	* sanity.sh (commit-readonlyfs): Test new read-only file-system
	repository mode.

2003-03-14  Mark D. Baushke  <mdb@cvshome.org>
